added resume dynamo db, new serverless app

--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Project Name</title>
+        <title>Resume | Joe Santoru</title>
     </head>
     <body style="text-align:center;">
         <div style="margin: 0 auto; text-align:center"></div>
-            <h1>Serverless website running!</h1>
-            <p>Website built on api gateway and lambda with an express backend api at <a href="/api/test/1234">/api/test/1234</a></p>
+            <h1>Resume</h1>
+            <p>Dynamic Resume / LinkedIn clone - with Serverless & DynamoDB</p>
     </body>
 </html>
